traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:12: error: too many arguments for method getY: ()Int
        setPos(getX+1,getY(1)-1)
                          ^